--- a/layout.tex
+++ b/layout.tex
@@ -2,7 +2,7 @@
   numbers=noenddot,
   headings=standardclasses,
   chapterprefix=false,
-  paper=b5,                   % Papierformat ist DIN B5
+  paper=a5,                   % Papierformat ist DIN B5
   fontsize=11pt
 }
 
@@ -70,7 +70,8 @@
 }%
 
 %% Satzspiegel
-\areaset{300pt}{530pt}%
+%\KOMAoptions{DIV=10}
+\areaset{288pt}{480pt}%
 \setlength{\marginparwidth}{8em}%
 \setlength{\marginparsep}{1.5em}%
 
