--- a/main.tex
+++ b/main.tex
@@ -21,36 +21,15 @@
 
 \mainmatter
 \chapter{Zeichensetzung}
-\lipsum
+\input{1-Zeichensetzung}
 
-\chapter{Schriftarten}
-\lipsum
+\chapter{Hervorhebungen}
+\input{2-Hervorhebungen}
 
-\chapter{Satzspiegel}
-\lipsum
+\chapter{Schriften}
+\input{3-Schriften}
 
-\chapter{Spezielle Elemente}
-
-\lipsum[1]
-
-\section{Überschriften}
-
-\lipsum[1]
-
-\subsection{Kapitel, Abschnitte und Unterabschnitte}
-
-\lipsum[2]
-
-\subsection{Hervorhebungsmöglichkeiten}
-
-\lipsum[3]
-
-\section{Tabellen}
-
-\lipsum[3]
-
-\section{Fu\texorpdfstring{ss}{ß}noten}
-
-\lipsum[4-6]
+\chapter{Seitenlayout}
+\input{4-Seitenlayout}
 
 \end{document}
