Started Quotation marks.

--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -1,6 +1,16 @@
-%% - Anführungszeichen (D/E)
-%% - Striche (D/E)
-%% - Leerzeichen
+\lipsum[1]\todo{Warum geht es hier?}
+
+\section{Anführungszeichen und Apostrophe}
+
+Die Standardanführungszeichen sowohl im Deutschen wie im Englischen sehen immer
+aus wie (gedrehte und verschobene) Kommata, also „“” sowie die einfachen
+Varianten ‚‘’. Je nach dem, wie sie gedreht sind,
+
+Dann gibt es noch »…«
+
+\section{Striche}
+
+\section{Leerzeichen}
 
 %%% Local Variables:
 %%% mode: latex
