--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,5 @@
 \documentclass[ngerman]{scrbook}
+\usepackage[size=tiny]{todonotes}
 
 \author{Florian Kranhold, Philip Schwartz}
 \title {Typographie}
