Typo in todonote.

--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -1,6 +1,6 @@
 \chapter{Zeichensetzung}
 
-\lipsum[1]\todo{Warum geht es hier?}
+\lipsum[1]\todo{Worum geht es hier?}
 
 \section{Anführungszeichen und Apostrophe}
 
