Todonotes vs. xcolor.

--- a/layout.tex
+++ b/layout.tex
@@ -32,6 +32,8 @@
 %% Farben
 \usepackage[dvipsnames]{xcolor}
 
+\usepackage[size=tiny]{todonotes}
+
 %% Wird für die Kapitelziffern benötigt.
 \usepackage{marginnote}
 
