Introduced the command Char and continued with 1.1

--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -5,8 +5,11 @@
 \section{Anführungszeichen und Apostrophe}
 
 Die Standardanführungszeichen sowohl im Deutschen wie im Englischen sehen immer
-aus wie (gedrehte und verschobene) Kommata, also „“” sowie die einfachen
-Varianten ‚‘’. Je nach dem, wie sie gedreht sind,
+aus wie (gedrehte und verschobene) Kommata, also \Char{„}\,\Char{“}\,\Char{”}
+sowie die einfachen Varianten \Char{‚}\,\Char{‘}\,\Char{’}. Je nachdem, wie sie
+gedreht sind, werden sie als »6en« oder »9en« bezeichnet.
+
+Im Deutschen 
 
 Dann gibt es noch »…«
 
