--- a/layout.tex
+++ b/layout.tex
@@ -78,6 +78,9 @@
 %% Keine Kopfzeilen
 \pagestyle{plain}
 
+%% Einzelne Zeichen
+\newcommand{\Char}[1]{\textcolor{Maroon}{#1}}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main"
