--- a/layout.tex
+++ b/layout.tex
@@ -37,6 +37,10 @@
 %% Wird für die Kapitelziffern benötigt.
 \usepackage{marginnote}
 
+%% Description-Listen
+\usepackage{enumitem}
+\setlist[description]{font=\rmfamily\mdseries\scshape\MakeLowercase}
+
 %% Hyperref als letztes Paket
 \usepackage[bookmarksnumbered=true,unicode,pdfusetitle,hidelinks]{hyperref}
 
