--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -15,6 +15,16 @@ Dann gibt es noch »…«
 
 \section{Striche}
 
+Es gibt verschiedene Arten von (horizontalen) \emph{Strichen}, die in
+Texten aller Art auftauchen.  Hier eine kleine Auswahl:
+\Char{-\,--\,---\,$-$\,$=$}.  Diese Striche haben verschiedene
+Aufgaben, die gerne verwechselt werden.  Typographisch unterscheiden
+wir die Striche üblicherweise nach ihrer Länge.
+
+\begin{description}
+\item[Viertelgeviertstrich]
+\end{description}
+
 \section{Leerzeichen}
 
 %%% Local Variables:
