--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -10,7 +10,7 @@ sowie die einfachen Varianten \Char{‚}\,\Char{‘}\,\Char{’}. Je nachdem, wi
 gedreht sind, werden sie als »6en« oder »9en« bezeichnet.
 
 Im Deutschen wird die Anführungszeichenkombination »99–66« benutzt, wobei die
-öffenen Anführungszeichen unten, die schließenden Jedoch oben stehen, zum
+öffenen Anführungszeichen unten, die schließenden jedoch oben stehen, zum
 Beispiel: „Hallo!“ Bei verschachtelten Anführungszeichen werden innen einfache
 Anführungszeichen, also »9–6«, benutzt: „Er sagte: ‚Hallo!{‘} und ging fort.“
 
