--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -4,10 +4,13 @@
 
 \section{Anführungszeichen und Apostrophe}
 
-Die Standardanführungszeichen sowohl im Deutschen wie im Englischen sehen immer
-aus wie (gedrehte und verschobene) Kommata, also \Char{„}\,\Char{“}\,\Char{”}
-sowie die einfachen Varianten \Char{‚}\,\Char{‘}\,\Char{’}. Je nachdem, wie sie
-gedreht sind, werden sie als »6en« oder »9en« bezeichnet.
+Die Standardversionen der \emph{Anführungszeichen} sowohl im Deutschen
+als auch im Englischen sehen immer aus wie (gedrehte und verschobene)
+Kommata, also \Char{„}\,\Char{“}\,\Char{”} sowie die einfachen
+Varianten \Char{‚}\,\Char{‘}\,\Char{’}. Je nachdem, wie sie gedreht
+sind, werden die einzelnen „Striche“ als »6en« oder »9en« bezeichnet
+-- denn sie sehen ein wenig aus wie verkleinerte und ausgefüllte
+Versionen dieser Ziffern (ein Komma \Char{,} sieht wie eine 9 aus).
 
 Im Deutschen wird die Anführungszeichenkombination »99–66« benutzt, wobei die
 öffenen Anführungszeichen unten, die schließenden jedoch oben stehen, zum
