--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -18,7 +18,7 @@ Versionen dieser Ziffern (ein Komma \Char{,} sieht wie eine 9 aus).
 Im Deutschen wird die Anführungszeichenkombination »99–66« benutzt, wobei die
 öffenen Anführungszeichen unten, die schließenden jedoch oben stehen, zum
 Beispiel: „Hallo!“ Bei verschachtelten Anführungszeichen werden innen einfache
-Anführungszeichen, also »9–6«, benutzt: „Er sagte: ‚Hallo!{‘} und ging fort.“
+Anführungszeichen, also »9–6«, benutzt: „Er sagte: ‚Hallo!{‘}, und ging fort.“
 
 Im Englischen wird (wenigstens im Britischen) die Kombination
 »6–9«, beide oben, verwendet, zum Beispiel: ‘Hi!’ Bei verschachtelten
