Mark British English.

--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -20,10 +20,11 @@ Im Deutschen wird die Anführungszeichenkombination »99–66« benutzt, wobei d
 Beispiel: „Hallo!“ Bei verschachtelten Anführungszeichen werden innen einfache
 Anführungszeichen, also »9–6«, benutzt: „Er sagte: ‚Hallo!{‘}, und ging fort.“
 
-Im Englischen wird (wenigstens im Britischen) die Kombination
-»6–9«, beide oben, verwendet, zum Beispiel: ‘Hi!’ Bei verschachtelten
-Anführungszeichen werden innen doppelte Anführungszeichen, also »66–99«,
-benutzt: ‘“Hi!”, he said, and went away.’
+Im Englischen wird (wenigstens im Britischen) die Kombination »6–9«,
+beide oben, verwendet, zum Beispiel: \foreignlanguage{british}{‘Hi!’}
+Bei verschachtelten Anführungszeichen werden innen doppelte
+Anführungszeichen, also »66–99«, benutzt:
+\foreignlanguage{british}{‘“Hi!”, he said, and went away.’}
 
 Alternativ können im Deutschen auch die sogenannten \emph{Guillemets}
 \Char{»}\,\Char{«} verwendet werden, so wie in diesem Skript. Innen werden dann
