--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[ngerman]{scrbook}
+\documentclass[british,ngerman]{scrbook}
 
 \author{Florian Kranhold, Philip Schwartz}
 \title {Typographie}
