Emacs source layout.

--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -7,7 +7,7 @@
 Die Standardversionen der \emph{Anführungszeichen} sowohl im Deutschen
 als auch im Englischen sehen immer aus wie (gedrehte und verschobene)
 Kommata, also \Char{„}\,\Char{“}\,\Char{”} sowie die einfachen
-Varianten \Char{‚}\,\Char{‘}\,\Char{’}. Je nachdem, wie sie gedreht
+Varianten \Char{‚}\,\Char{‘}\,\Char{’}.  Je nachdem, wie sie gedreht
 sind, werden die einzelnen „Striche“ als »6en« oder »9en« bezeichnet
 -- denn sie sehen ein wenig aus wie verkleinerte und ausgefüllte
 Versionen dieser Ziffern (ein Komma \Char{,} sieht wie eine 9 aus).
@@ -27,17 +27,17 @@ Anführungszeichen, also »66–99«, benutzt:
 \foreignlanguage{british}{‘“Hi!”, he said, and went away.’}
 
 Alternativ können im Deutschen auch die sogenannten \emph{Guillemets}
-\Char{»}\,\Char{«} verwendet werden, so wie in diesem Skript. Innen werden dann
-die einfachen Guillements \Char{›}\,\Char{‹} verwendet.
+\Char{»}\,\Char{«} verwendet werden, so wie in diesem Skript.  Innen
+werden dann die einfachen Guillements \Char{›}\,\Char{‹} verwendet.
 
 Wir weisen darauf hin, dass die auf einer Tastatur leichter zu erreichenden
 \emph{Ersatzzeichen} \Char{"} und \Char{\textquotesingle} historische Relike aus
 der Schreibmaschinenzeit und semantisch falsch sind.
 
 Der \emph{Apostroph} \Char{’} ist von einem einfachen schließenden englischen
-Anführungszeichen nicht zu unterscheiden. Man sollte die Sprache, in der man
-schreibt, gut genug beherrschen, um zu wissen, wo sie hinkommen und wo
-nicht.\todo{Hier Han-Solo-Meme.} Wichtig: Die freistehenden Akzentzeichen
+Anführungszeichen nicht zu unterscheiden.  Man sollte die Sprache, in der
+man schreibt, gut genug beherrschen, um zu wissen, wo sie hinkommen und wo
+nicht.\todo{Hier Han-Solo-Meme.}  Wichtig: Die freistehenden Akzentzeichen
 \Char{\textasciigrave} und \Char{´} sind \emph{keine} Apostrophe!
 
 
