--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -30,9 +30,11 @@ Alternativ können im Deutschen auch die sogenannten \emph{Guillemets}
 \Char{»}\,\Char{«} verwendet werden, so wie in diesem Skript.  Innen
 werden dann die einfachen Guillements \Char{›}\,\Char{‹} verwendet.
 
-Wir weisen darauf hin, dass die auf einer Tastatur leichter zu erreichenden
-\emph{Ersatzzeichen} \Char{"} und \Char{\textquotesingle} historische Relike aus
-der Schreibmaschinenzeit und semantisch falsch sind.
+Wir weisen darauf hin, dass die auf einer Tastatur leichter zu
+erreichenden \emph{Ersatzzeichen} \Char{"} und \Char{\textquotesingle}
+(bei deutscher \acr{QWERTZ}-Belegung \keys{\shift+2}
+bzw. \keys{\shift+\#}) historische Relike aus der Schreibmaschinenzeit
+und semantisch falsch sind.
 
 Der \emph{Apostroph} \Char{’} ist von einem einfachen schließenden englischen
 Anführungszeichen nicht zu unterscheiden.  Man sollte die Sprache, in der
