--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -38,9 +38,10 @@ Schreibmaschinenzeit und semantisch falsch sind.
 
 Der \emph{Apostroph} \Char{’} ist von einem einfachen schließenden englischen
 Anführungszeichen nicht zu unterscheiden.  Man sollte die Sprache, in der
-man schreibt, gut genug beherrschen, um zu wissen, wo sie hinkommen und wo
-nicht.\todo{Hier Han-Solo-Meme.}  Wichtig: Die freistehenden Akzentzeichen
-\Char{\textasciigrave} und \Char{´} sind \emph{keine} Apostrophe!
+man schreibt, gut genug beherrschen, um zu wissen, wo Apostrophe hinkommen und
+wo nicht.\todo{Hier Han-Solo-Meme.}  Wichtig: Die freistehenden Akzentzeichen
+\Char{\textasciigrave} und \Char{´} sind, genau wie das Ersatzzeichen
+\Char{\textquotesingle}, \emph{keine} Apostrophe!
 
 
 \section{Striche}
