--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -35,6 +35,8 @@ erreichenden \emph{Ersatzzeichen} \Char{"} und \Char{\textquotesingle}
 (bei deutscher \acr{QWERTZ}-Belegung \keys{\shift+2}
 bzw. \keys{\shift+\#}) historische Relikte aus der
 Schreibmaschinenzeit und semantisch falsch sind.
+\todo{Auch hier schon Akzente erwähnen?  (Leute machen die wildesten
+  Dinge …)  --~Philip}
 
 Der \emph{Apostroph} \Char{’} ist von einem einfachen schließenden englischen
 Anführungszeichen nicht zu unterscheiden.  Man sollte die Sprache, in der
