--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -55,7 +55,26 @@ Aufgaben, die gerne verwechselt werden.  Typographisch unterscheiden
 wir die Striche üblicherweise nach ihrer Länge.
 
 \begin{description}
-\item[Viertelgeviertstrich]
+\item[Viertelgeviertstrich] Der Viertelgeviertstrich \Char{-} ist der
+  kürzeste der üblichen Striche.  Er wird auf Deutsch sowie auf
+  Englisch als \emph{Trennstrich} bei Worttrennungen an
+  Zeilenumbrüchen verwendet.  Auf Deutsch ist er außerdem der
+  \emph{Bindestrich} in nicht zusammengeschriebenen Komposita,
+  bspw. in »Anti-Terror-Anschlag«.  Dieses grammatikalische Phänomen
+  nennt man \emph{Durchkopplung}; es betrifft auch die Zusammensetzung
+  von Eigennamen aus mehreren Wörtern mit weiteren Wörtern zu einem
+  Kompositum: bspw. wird aus »Johann Sebastian Bach« und »Straße« die
+  »Johann-Sebastian-Bach-Straße«.
+
+  Im Englischen gibt es üblicherweise \emph{keine} Durchkopplung,
+  außer bei zusammengesetzten Adjektiven: es heißt »apple tree«,
+  »anti-terror attack« oder »Johann Sebastian Bach Street«.
+
+  Im Deutschen werden auch Dinge, die nach mehreren Personen benannt
+  sind, als normales Kompositum betrachtet und dementsprechend mit
+  Bindestrich gesetzt.  Dieses Skript könnte man bspw. das
+  »Kranhold-Schwartz-Skript« nennen.  (Auf Englisch ist das anders,
+  siehe unten.)
 \end{description}
 
 \section{Leerzeichen}
