--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -8,12 +8,9 @@ Die Standardversionen der \emph{Anführungszeichen} sowohl im Deutschen
 als auch im Englischen sehen immer aus wie (gedrehte und verschobene)
 Kommata, also \Char{„}\,\Char{“}\,\Char{”} sowie die einfachen
 Varianten \Char{‚}\,\Char{‘}\,\Char{’}.  Je nachdem, wie sie gedreht
-sind, werden die einzelnen „Striche“ als »6en« oder »9en« bezeichnet
+sind, werden die einzelnen »Striche« als »6en« oder »9en« bezeichnet
 -- denn sie sehen ein wenig aus wie verkleinerte und ausgefüllte
 Versionen dieser Ziffern (ein Komma \Char{,} sieht wie eine 9 aus).
-\todo{Ich habe jetzt die „Konvention“ benutzt, dass \Char{»«} für
-  Zitate verwendet werden und \Char{„“} für quasi „umgangssprachlich“
-  verwendete Sachen.  Ist das zu viel Overkill?  -- Philip}
 
 Im Deutschen wird die Anführungszeichenkombination »99–66« benutzt, wobei die
 öffenen Anführungszeichen unten, die schließenden jedoch oben stehen, zum
