Started writing chapter 2.

--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -1,10 +1,19 @@
 \chapter{Schriften}
+\label{ch:Schriften}
 
-%% - Kerning
+\section{Kerning und Spacing}
+\label{sec:KernSpace}
+
 %% - Ligaturen
 %% - Liniensystem
 %% - Serifen
-%% - Schriftschnitte
+
+\section{Schriftschnitte}
+\label{sec:Schnitte}
+
+\section{Ziffern}
+\label{sec:Ziffern}
+
 %% - Beispiele: Garamond, Palatino, Minion, Optima/Classico, Times, Helvetica
 
 %%% Local Variables:
