--- a/layout.tex
+++ b/layout.tex
@@ -12,7 +12,7 @@
 
 %% Hierfür wird das CTAN-Paket MinionPro, zusammen mit den
 %% Type-1-Dateien der Minion Pro, benötigt.
-\usepackage[textosf,mathlf,opticals,footnotefigures]{MinionPro}
+\usepackage[fullfamily,textosf,mathlf,opticals,footnotefigures]{MinionPro}
 
 %% Eine Dicktengleiche
 \usepackage[scaled=.8]{beramono}
@@ -45,7 +45,7 @@
 \raggedbottom
 
 %% Akronyme
-\newcommand{\acr}[1]{\textsc{\textls[40]{\MakeLowercase{#1}}}}
+\newcommand{\acr}[1]{\textsc{\textls[20]{\MakeLowercase{#1}}}}
 
 %% Etwas mehr Spacing für spaced small caps
 \SetTracking[spacing={100*,166,}]{encoding=*,shape=ssc}{15}
