--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,8 @@
 %% Hyperref als letztes Paket
 \usepackage[bookmarksnumbered=true,unicode,pdfusetitle,hidelinks]{hyperref}
 
+\usepackage{cleveref}
+
 %% schräge Schrift („slanted“)
 %% Quelle: https://tex.stackexchange.com/a/260952
 \newsavebox\foobox
