--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -1,5 +1,72 @@
 \chapter{Hervorhebungen}
 
+\lipsum[1]
+
+\section{Kursivsatz}
+
+Die wohl üblichste Methode, Passagen im Fließtext hervorzuheben, ist, sie
+\emph{kursiv} zu setzen. Diese Hervorhebung ist dezent und seit vielen
+Jahrhunderten etabliert. Fast alle Schriftarten bringen eigene Schriftschnitte
+für kursiven Text (siehe \cref{sec:Schnitte}) mit. Sollte ein kursiver
+Schriftschnitt fehlen, könnte das Textsatzprogramm versuchen, den Kursivsatz
+künstlich durch \textsl{Schrägen} zu erzeugen; davon ist abzuraten.
+
+\section{Fettdruck}
+
+Eine heutzutage sehr verbreitete, aber noch gar nicht so alte Methode der
+Hervorhebung ist die Verwendung von {\fontseries{eb}\selectfont {Fett-}} oder
+besser \textbf{Mittelfettbuchstaben}. Man sollte bedenken, dass diese
+Auszeichnungsart sehr hervorstricht. Üblicher ist es, Gliederungselemente wie
+Überschriften mit fetten Buchstaben zu setzen. In einem sehr klassischen Layout
+(wie dem dieses Skripts) taucht diese Auszeichnung kaum auf. Eine
+\emph{{\fontseries{b}\selectfont{Kombination}}} von fett und kursiv ist zwar
+möglich, sticht aber extrem hervor und sollte deshalb mit äußerster Vorsicht
+eingesetzt werden.
+
+\section{Kapitälchen}
+
+Viele Schriftarten besitzen eine Variante der Großbuchstaben, die so hoch wie
+übliche Kleinbuchstaben ist. Diese Glyphen heißen \textsc{kapitälchen}. Man
+bemerke, dass sich diese Zeichen deutlich von einer reinen Skalierung der
+Großbuchstaben unterscheiden, zum Vergleich: \textsmaller[2]{KAPITÄLCHEN}; der
+wohl größte Unterschied ist die deutlich zu geringe Strichdicke. Bevor man
+Kapitälchen verwendet, sollte man also prüfen, ob die eingesetzte Schriftart
+solche enthält, da man sonst Gefahr läuft, Kapitälchen durch Skalierung zu
+imitieren.\looseness-1
+
+Bei Kapitälchen wird nicht zwischen Groß- und Kleinbuchstaben
+unterschieden. Dennoch ist es geschieht es oft, dass Großbuchstaben in einer
+Kapitälchenumgebung mit normalen Großbuchstaben gesetzt werden, also
+\textsc{Kapitälchen}. Gerade hier ist es wichtig, »echte« Kapitälchen zu
+nutzen; ansonsten erhält man so etwas wie K\textsmaller[2]{APITÄLCHEN}, also
+unterschiedliche Strichdicken im selben Wort.
+
+Kapitälchen werden häufig \emph{gesperrt}, d.\,h. der Abstand zwischen den
+einzelnen Buchstaben wird künstlich vergrößert, zum Vergleich:
+\textls[50]{\textsc{kapitälchen}}. Kleinbuchstaben will man hingegen nicht
+\textls[50]{sperren}.
+
+Kapitälchen können an unterschiedlichsten Stellen zum Einsatz kommen, und je
+nach Anwendung bietet sich ein anderer Sperrfaktor an. In diesem Skript werden
+Kapitälchen unter anderem für die Überschriften der Abschnitte verwendet. Nicht
+selten werden Namen wie \textls[15]{\textsc{immanuel kant} (1724–1804)} auf
+diese Weise hervorgehoben. Abschließend ist es ratsam, \emph{Akronyme} wie etwa
+\acr{spd} oder \acr{PHP} mit leicht gesperrten Kapitälchen zu setzen, damit sie
+nicht, wie etwa SPD und PHP, hervorstechen. Bei Akronymen, die Zahlen enthalten
+(wie etwa \acr{3D}, \acr{C-3PO} oder \acr{BW\kern-.3px V\,29}), müssen dann aber
+\emph{Minuskelziffern} (siehe \cref{sec:Ziffern}) verwendet, denn
+\acr{\figureversion{lf}{3}d}, \acr{C-\figureversion{lf}{3}PO} und
+\acr{bw\kern-.3px v\,\figureversion{lf}{29}} wirken unruhig.
+
+\section{Versalien}
+
+Die
+
+\section{Unterstreichen}
+
+Unterstreichen ist \underline{Mist}. \underline{Leitung} \underline{\smash{Leitung}}
+
+
 %% - Kursiv
 %% - Unterstreichen (mist)
 %% - Fett (modern)
