--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -72,6 +72,44 @@ Bindestrich gesetzt.  Dieses Skript könnte man bspw. das
 »Kranhold-Schwartz-Skript« nennen.  (Auf Englisch ist das anders,
 siehe unten.)
 
+\paragraph{Halbgeviertstrich}
+Der \emph{Halbgeviertstrich} \Char{--} ist doppelt so lang wie der
+Viertelgeviertstrich.  Er ist der \emph{Bis-Strich} in Zeitraumangaben
+wie »in den Jahren 2012--2023« oder »geöffnet Mo.--Fr. 9--18 Uhr«.
+Dabei ist zu beachten, dass er \emph{nicht} in der Phrase »von … bis
+…« das »bis« ersetzen darf: »von 11--13 Uhr« ist falsch.  Auch in
+Streckenangaben steht ein Halbgeviertstrich: »Auf der Strecke
+Köln--Karlsruhe fährt der \acr{ICE} 203.«
+
+Er kann auch als Aufzählungszeichen verwendet werden
+(»Spiegelstrich«):
+\begin{itemize}[label=--,nosep]
+\item Es gibt sone und
+\item solche, und
+\item dann gibt's noch ganz andere!
+\end{itemize}
+Meistens sieht das aber nicht so gut aus und Aufzählungs\emph{punkte}
+sind besser.
+
+Im Deutschen ist der Halbgeviertstrich, umschlossen von Leerzeichen,
+auch der \emph{Gedankenstrich}: »Ein Gedankenstrich sieht ganz gut
+aus~-- manchmal zumindest.«  Dabei ist darauf zu achten, wie sich die
+Striche an Zeilenumbrüchen verhalten: Wenn ein Gedankenstrich einen
+Satz in zwei Teile teilt, soll höchstens \emph{nach} ihm umgebrochen
+werden (er »klebt« also am ersten Satzteil); wenn Gedankenstriche
+einen Einschub umschließen, soll höchstens \emph{vor} dem vorderen und
+\emph{nach} dem hinteren umgebrochen werden (sie »kleben« also am
+Einschub).  Das sieht dann also wie folgt aus:  Manche --~Dinge
+umschließende~-- Striche kleben an Wörtern, wohingegen~--
+Stopp, das führt jetzt zu weit.
+
+Auf Englisch wird traditionell der Halbgeviertstrich benutzt, um nach
+merheren Personen benannte Dinge zu schreiben.  Dieses Skript wären
+dann also bspw. die »\foreignlanguage{british}{Kranhold--Schwartz
+  course notes}«.  Manchmal (insb. in \acr{US}-amerikanischen /
+nordamerikanischen Kontexten, aber nicht nur da) wird da stattdessen
+aber wie auf Deutsch ein Viertelgeviertstrich verwendet.
+
 \section{Leerzeichen}
 
 %%% Local Variables:
