--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -101,7 +101,7 @@ einen Einschub umschließen, soll höchstens \emph{vor} dem vorderen und
 \emph{nach} dem hinteren umgebrochen werden (sie »kleben« also am
 Einschub).  Das sieht dann also wie folgt aus:  Manche --~Dinge
 umschließende~-- Striche kleben an Wörtern, wohingegen~--
-Stopp, das führt jetzt zu weit.
+aber Stopp, das führt jetzt zu weit.
 
 Auf Englisch wird traditionell der Halbgeviertstrich benutzt, um nach
 merheren Personen benannte Dinge zu schreiben.  Dieses Skript wären
