--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -107,8 +107,8 @@ Auf Englisch wird traditionell der Halbgeviertstrich benutzt, um nach
 merheren Personen benannte Dinge zu schreiben.  Dieses Skript wären
 dann also bspw. die »\foreignlanguage{british}{Kranhold--Schwartz
   course notes}«.  Manchmal (insb. in \acr{US}-amerikanischen /
-nordamerikanischen Kontexten, aber nicht nur da) wird da stattdessen
-aber wie auf Deutsch ein Viertelgeviertstrich verwendet.
+nordamerikanischen Kontexten, aber nicht nur da) wird dafür
+stattdessen aber wie auf Deutsch ein Viertelgeviertstrich verwendet.
 
 \section{Leerzeichen}
 
