--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -1,6 +1,10 @@
 \chapter{Hervorhebungen}
 
-\lipsum[1]
+Oft ist man in der Situation, dass der eigentliche Text in einer bestimmten
+Schrift gesetzt ist, aber beispielsweise einzelne Wörter oder
+Gliederungselemente (wie Titel und Überschriften) zur besseren Übersichtlichkeit
+\emph{hervorgehoben} werden sollen. Hierfür gibt es verschiedene Möglichkeiten, die
+je nach Situation geeigneter als andere sein können.
 
 \section{Kursivsatz}
 
@@ -46,25 +50,35 @@ einzelnen Buchstaben wird künstlich vergrößert, zum Vergleich:
 \textls[50]{\textsc{kapitälchen}}. Kleinbuchstaben will man hingegen nicht
 \textls[50]{sperren}.
 
-Kapitälchen können an unterschiedlichsten Stellen zum Einsatz kommen, und je
-nach Anwendung bietet sich ein anderer Sperrfaktor an. In diesem Skript werden
+Kapitälchen können an verschiedenen Stellen zum Einsatz kommen, und je nach
+Anwendung bietet sich ein anderer Sperrfaktor an. In diesem Skript werden
 Kapitälchen unter anderem für die Überschriften der Abschnitte verwendet. Nicht
-selten werden Namen wie \textls[15]{\textsc{immanuel kant} (1724–1804)} auf
-diese Weise hervorgehoben. Abschließend ist es ratsam, \emph{Akronyme} wie etwa
-\acr{spd} oder \acr{PHP} mit leicht gesperrten Kapitälchen zu setzen, damit sie
-nicht, wie etwa SPD und PHP, hervorstechen. Bei Akronymen, die Zahlen enthalten
-(wie etwa \acr{3D}, \acr{C-3PO} oder \acr{BW\kern-.3px V\,29}), müssen dann aber
-\emph{Minuskelziffern} (siehe \cref{sec:Ziffern}) verwendet, denn
+selten werden Namen wie \textls[15]{\textsc{immanuel kant} (1724–1804)} mit
+Kapitälchen hervorgehoben.\looseness-1
+
+\section{Exkurs: Akronyme}
+
+Es ist ratsam, \emph{Akronyme} wie etwa \acr{spd} oder \acr{PHP} mit leicht
+gesperrten Kapitälchen zu setzen, damit sie nicht, wie etwa SPD und PHP,
+hervorstechen. Bei Akronymen, die Zahlen enthalten (wie etwa \acr{3D},
+\acr{C-3PO} oder \acr{BW\kern-.3px V\,29}), müssen dann aber
+\emph{Minuskelziffern} (siehe \cref{sec:Ziffern}) verwendet, sonst erhält man
 \acr{\figureversion{lf}{3}d}, \acr{C-\figureversion{lf}{3}PO} und
-\acr{bw\kern-.3px v\,\figureversion{lf}{29}} wirken unruhig.
+\acr{bw\kern-.3px v\,\figureversion{lf}{29}}.
 
 \section{Versalien}
 
-Die
+Die einfachste, aber deutlichste (oder besser: kompromissloseste) Art
+der Hervorhebung ist die Verwendung von \textls[60]{VERSALIEN} (also
+Großbuchstaben), die dann gesperrt werden sollten. Wir verwenden sie für
+Kapitelüberschriften und den Skripttitel.  Diese Auszeichnungsform ist etwas aus
+der Mode gekommen, findet sich aber in alten Texten sehr häufig.\looseness-1
 
-\section{Unterstreichen}
+\section{Unterstreichungen}
 
-Unterstreichen ist \underline{Mist}. \underline{Leitung} \underline{\smash{Leitung}}
+Unterstreichungen sind \underline{Mist}, vor allem, wenn Buchstaben vorkommen,
+die \underline{Unterlänge} haben. Mogelt man und ignoriert Kollisionen, so wird
+es auch nicht besser: \underline{\smash{Unterlänge}}.
 
 
 %% - Kursiv
