--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -4,9 +4,11 @@
 \section{Kerning und Spacing}
 \label{sec:KernSpace}
 
-%% - Ligaturen
-%% - Liniensystem
-%% - Serifen
+\section{Ligaturen}
+
+\section{Liniensystem}
+
+\section{Serifen}
 
 \section{Schriftschnitte}
 \label{sec:Schnitte}
