--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -56,7 +56,7 @@ Der Viertelgeviertstrich \Char{-} ist der kürzeste der üblichen
 Striche.  Er wird auf Deutsch sowie auf Englisch als
 \emph{Trennstrich} bei Worttrennungen an Zeilenumbrüchen verwendet.
 Auf Deutsch ist er außerdem der \emph{Bindestrich} in nicht
-zusammengeschriebenen Komposita, bspw. in »Anti-Terror-Anschlag«.
+zusammenge\-schriebenen Komposita, bspw. in »Anti-Terror-Anschlag«.
 Dieses grammatikalische Phänomen nennt man \emph{Durchkopplung}; es
 betrifft auch die Zusammensetzung von Eigennamen aus mehreren Wörtern
 mit weiteren Wörtern zu einem Kompositum: bspw. wird aus »Johann
