--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -54,6 +54,7 @@ Kapitälchen können an verschiedenen Stellen zum Einsatz kommen, und je nach
 Anwendung bietet sich ein anderer Sperrfaktor an. In diesem Skript werden
 Kapitälchen unter anderem für die Überschriften der Abschnitte verwendet. Nicht
 selten werden Namen wie \textls[15]{\textsc{immanuel kant} (1724–1804)} mit
+\todo{Tatsächlich hier die Jahreszahlen mit-sperren?  --~Philip}
 Kapitälchen hervorgehoben.\looseness-1
 
 \section{Exkurs: Akronyme}
