Finish horizontal lines.

--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -110,6 +110,47 @@ dann also bspw. die »\foreignlanguage{british}{Kranhold--Schwartz
 nordamerikanischen Kontexten, aber nicht nur da) wird dafür
 stattdessen aber wie auf Deutsch ein Viertelgeviertstrich verwendet.
 
+\paragraph{Geviertstrich}
+Der \emph{Geviertstrich} \Char{---} wird im Deutschen üblicherweise
+nicht verwendet; eine Ausnahme stellen manchmal Quellenangaben bei
+Zitaten dar:
+\begin{displayquote}
+  Musik ist wie ein Hamburger, die Noten sind die \mbox{Gurken}.
+
+  \quad---~J.\,S.\,Bach
+\end{displayquote}
+
+In englischer Typographie wird oft ein Geviertstrich ohne
+umschließende Leerzeichen als Gedankenstrich verwendet:
+»\foreignlanguage{british}{This looks quite interesting---but also
+  somewhat peculiar for Germans.}»  Oft wird aber auch im Englischen
+ein Halbgeviertstrich mit Leerzeichen verwendet.
+
+\paragraph{Minuszeichen}
+Das im Formelsatz verwendete \emph{Minuszeichen} \Char{$-$} ist
+natürlich semantisch verschieden von den vorher beschriebenen
+Text-Strichen; in den meisten Schriftarten sieht es auch anders aus.
+Seine Breite entspricht der des Pluszeichens, und es ist vertikal
+zentriert.  Zum Beispiel ist $1 + 2 - 3 = 0$.
+
+\paragraph{Gleichheitszeichen}
+Auch das \emph{Gleichheitszeichen} \Char{$=$} besteht natürlich aus
+horizontalen Strichen~-- nämlich \emph{Zwillings-Linien}, wie sein
+Erfinder \textls[15]{\textsc{Robert Recorde} (ca. 1510--1558)}
+schrieb:
+\begin{displayquote}
+  \foreignlanguage{british}{And to avoide the tediouse repetition of
+    these woordes : is equalle to : I will sette as I doe often in
+    woorke use, a paire of paralleles, or Gemowe lines of one lengthe,
+    thus: $=$, bicause noe .2. thynges, can be moare equalle.}
+
+  \quad---~Robert Recorde, \emph{The Whetstone of Witte} (1557)
+\end{displayquote}
+
+In gebrochenen Schriften sieht außerdem der Trennstrich einem
+Gleichheitszeichen ähnlich.  Wir beschäftigen uns hier aber nicht mit
+gebrochenen Schriften.
+
 \section{Leerzeichen}
 
 %%% Local Variables:
