--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -136,7 +136,7 @@ zentriert.  Zum Beispiel ist $1 + 2 - 3 = 0$.
 \paragraph{Gleichheitszeichen}
 Auch das \emph{Gleichheitszeichen} \Char{$=$} besteht natürlich aus
 horizontalen Strichen~-- nämlich \emph{Zwillings-Linien}, wie sein
-Erfinder \textls[15]{\textsc{Robert Recorde} (ca. 1510--1558)}
+Erfinder \textls[15]{\textsc{robert recorde} (ca. 1510--1558)}
 schrieb:
 \begin{displayquote}
   \foreignlanguage{british}{And to avoide the tediouse repetition of
