--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -4,7 +4,7 @@ Oft ist man in der Situation, dass der eigentliche Text in einer bestimmten
 Schrift gesetzt ist, aber beispielsweise einzelne Wörter oder
 Gliederungselemente (wie Titel und Überschriften) zur besseren Übersichtlichkeit
 \emph{hervorgehoben} werden sollen. Hierfür gibt es verschiedene Möglichkeiten, die
-je nach Situation geeigneter als andere sein können.
+je nach Situation verschieden geeigneten sein können.
 
 \section{Kursivsatz}
 
