--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 %% Hyperref als letztes Paket
 \usepackage[bookmarksnumbered=true,unicode,pdfusetitle,hidelinks]{hyperref}
 
-\usepackage{cleveref}
+\usepackage[nameinlink]{cleveref}
 
 %% schräge Schrift („slanted“)
 %% Quelle: https://tex.stackexchange.com/a/260952
