--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -20,7 +20,7 @@ künstlich durch \textsl{Schrägen} zu erzeugen; davon ist abzuraten.
 Eine heutzutage sehr verbreitete, aber noch gar nicht so alte Methode der
 Hervorhebung ist die Verwendung von {\fontseries{eb}\selectfont {Fett-}} oder
 besser \textbf{Mittelfettbuchstaben}. Man sollte bedenken, dass diese
-Auszeichnungsart sehr hervorstricht. Üblicher ist es, Gliederungselemente wie
+Auszeichnungsart sehr hervorsticht. Üblicher ist es, Gliederungselemente wie
 Überschriften mit fetten Buchstaben zu setzen. In einem sehr klassischen Layout
 (wie dem dieses Skripts) taucht diese Auszeichnung kaum auf. Eine
 \emph{{\fontseries{b}\selectfont{Kombination}}} von fett und kursiv ist zwar
