--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -39,8 +39,8 @@ solche enthält, da man sonst Gefahr läuft, Kapitälchen durch Skalierung zu
 imitieren.\looseness-1
 
 Bei Kapitälchen wird nicht zwischen Groß- und Kleinbuchstaben
-unterschieden. Dennoch geschieht es oft, dass Großbuchstaben in einer
-Kapitälchenumgebung mit normalen Großbuchstaben gesetzt werden, also
+unterschieden. Dennoch geschieht es oft, dass zur Unterscheidung »normale«
+Großbuchstaben in Kombination mit Kapitälchen gesetzt werden, also
 \textsc{Kapitälchen}. Gerade hier ist es wichtig, »echte« Kapitälchen zu
 nutzen; ansonsten erhält man so etwas wie K\textsmaller[2]{APITÄLCHEN}, also
 unterschiedliche Strichdicken im selben Wort.
